--- a/.github/workflows/qa-contributions.yml
+++ b/.github/workflows/qa-contributions.yml
@@ -25,3 +25,6 @@ jobs:
       # Checkout the contribution
       - name: Checkout project
         uses: actions/checkout@v3
+      # Spellcheck Markdown files
+      - name: Spellcheck Markdown
+        uses: tbroadley/spellchecker-cli-action@v1
