FEAT: UK Spellchecking and less feedback.

--- a/.github/workflows/qa-contributions.yml
+++ b/.github/workflows/qa-contributions.yml
@@ -28,3 +28,6 @@ jobs:
       # Spellcheck Markdown files
       - name: Spellcheck Markdown
         uses: tbroadley/spellchecker-cli-action@v1
+        with:
+          language: "en-UK"
+          quiet: true
