--- a/.github/workflows/qa-contributions.yml
+++ b/.github/workflows/qa-contributions.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Spellcheck Markdown
         uses: tbroadley/spellchecker-cli-action@v1
         with:
-          language: "en-UK"
+          language: "en-GB"
           quiet: true
